# web-agent

./: .gitignore  Compose.yml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.html
docs/: how.md
src/: __init__.py  agent.py  main.py  web.py
src/webAgent/: __init__.py  agent.py  config.py  main.py  web.py
